[gd_scene load_steps=19 format=3 uid="uid://bv352i30el007"]

[ext_resource type="Script" path="res://main.gd" id="1_jqhv2"]
[ext_resource type="Texture2D" uid="uid://cmx1jg7fcrfj8" path="res://assets/textures/towerDefense_tilesheet@2.png" id="2_5be28"]
[ext_resource type="PackedScene" uid="uid://dg7mve7qwdvtd" path="res://source/actor/enemy/enemy_01.tscn" id="2_yrqsx"]
[ext_resource type="PackedScene" uid="uid://cmycs2ron7ucl" path="res://source/actor/enemy/enemy_02.tscn" id="3_3uf4q"]
[ext_resource type="PackedScene" uid="uid://ddvuja473abwq" path="res://source/actor/tower/tower_1.tscn" id="3_too2k"]
[ext_resource type="PackedScene" uid="uid://43qc3puk6h66" path="res://source/actor/enemy/enemy_03.tscn" id="4_i6o2s"]
[ext_resource type="PackedScene" uid="uid://jcm308ms0ybk" path="res://source/actor/tower/tower_2.tscn" id="4_muq52"]
[ext_resource type="PackedScene" uid="uid://tuhmc1huq554" path="res://source/actor/tower.tscn" id="4_t20a8"]
[ext_resource type="PackedScene" uid="uid://bsdyi2ndcou0j" path="res://source/actor/tower/tower_3.tscn" id="5_3up1o"]
[ext_resource type="PackedScene" uid="uid://chdctndnj2pes" path="res://source/UI/game_form.tscn" id="5_cupd8"]
[ext_resource type="PackedScene" uid="uid://b6x5qflohs566" path="res://source/actor/enemy/enemy_04.tscn" id="5_uvwx5"]
[ext_resource type="PackedScene" uid="uid://g3efanynw3tf" path="res://source/actor/enemy/enemy_05.tscn" id="6_5xyv4"]
[ext_resource type="AudioStream" uid="uid://deqgxc7i5uje8" path="res://assets/sound/footstep00.ogg" id="6_11210"]
[ext_resource type="PackedScene" uid="uid://5ksy03l8g8lo" path="res://source/actor/tower/tower_4.tscn" id="6_dlu47"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w0uq7"]
texture = ExtResource("2_5be28")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_p8yu4"]
resource_name = "Tower"
scenes/1/scene = ExtResource("4_t20a8")

[sub_resource type="TileSet" id="TileSet_3kpw0"]
tile_size = Vector2i(128, 128)
sources/1 = SubResource("TileSetAtlasSource_w0uq7")
sources/2 = SubResource("TileSetScenesCollectionSource_p8yu4")

[sub_resource type="Curve2D" id="Curve2D_joo5w"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 240, -80, 0, 0, 0, 0, 240, 1280, 0, 0, 0, 0, 640, 1280, 0, 0, 0, 0, 640, 240, 0, 0, 0, 0, 1040, 240, 0, 0, 0, 0, 1040, 1280, 0, 0, 0, 0, 1440, 1280, 0, 0, 0, 0, 1440, 240, 0, 0, 0, 0, 1760, 240, 0, 0, 0, 0, 1760, 1280, 0, 0, 0, 0, 2160, 1280, 0, 0, 0, 0, 2160, 240, 0, 0, 0, 0, 2560, 240, 0, 0, 0, 0, 2560, 1280, 0, 0, 0, 0, 2960, 1280)
}
point_count = 15

[node name="main" type="Node2D"]
script = ExtResource("1_jqhv2")
enemies = Array[PackedScene]([ExtResource("2_yrqsx"), ExtResource("3_3uf4q"), ExtResource("4_i6o2s"), ExtResource("5_uvwx5"), ExtResource("6_5xyv4")])
start_coin = 200
_towers = Array[PackedScene]([ExtResource("3_too2k"), ExtResource("4_muq52"), ExtResource("5_3up1o"), ExtResource("6_dlu47")])

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(0.68, 0.68)
tile_set = SubResource("TileSet_3kpw0")
format = 2
layer_0/name = "BG"
layer_0/tile_data = PackedInt32Array(0, 65537, 1, 65537, 65537, 1, 65538, 65537, 1, 131075, 65537, 1, 131076, 65537, 1, 196613, 65537, 1, 196614, 65537, 1, 196615, 65537, 1, 262151, 65537, 1, 262152, 65537, 1, 262153, 65537, 1, 327689, 65537, 1, 327690, 65537, 1, 262154, 65537, 1, 196617, 65537, 1, 196616, 65537, 1, 196612, 65537, 1, 196611, 65537, 1, 196610, 65537, 1, 262145, 65537, 1, 262144, 65537, 1, 327680, 65537, 1, 327681, 65537, 1, 327682, 65537, 1, 327683, 65537, 1, 262147, 65537, 1, 262146, 65537, 1, 196609, 65537, 1, 327684, 65537, 1, 393219, 65537, 1, 393220, 65537, 1, 393221, 65537, 1, 393222, 65537, 1, 393223, 65537, 1, 262148, 65537, 1, 262149, 65537, 1, 589830, 65537, 1, 589831, 65537, 1, 524297, 65537, 1, 458762, 65537, 1, 458763, 65537, 1, 589836, 65537, 1, 720897, 65537, 1, 720898, 65537, 1, 655363, 65537, 1, 655364, 65537, 1, 655365, 65537, 1, 524296, 65537, 1, 524298, 65537, 1, 458764, 65537, 1, 458765, 65537, 1, 393230, 65537, 1, 393231, 65537, 1, 327696, 65537, 1, 327697, 65537, 1, 131085, 65537, 1, 196621, 65537, 1, 262157, 65537, 1, 327694, 65537, 1, 458766, 65537, 1, 524302, 65537, 1, 589839, 65537, 1, 655375, 65537, 1, 589843, 65537, 1, 589842, 65537, 1, 589841, 65537, 1, 589840, 65537, 1, 589838, 65537, 1, 589837, 65537, 1, 589835, 65537, 1, 589834, 65537, 1, 327688, 65537, 1, 393224, 65537, 1, 458760, 65537, 1, 589832, 65537, 1, 393225, 65537, 1, 458761, 65537, 1, 589833, 65537, 1, 196618, 65537, 1, 393226, 65537, 1, 196619, 65537, 1, 262155, 65537, 1, 327691, 65537, 1, 393227, 65537, 1, 524299, 65537, 1, 196620, 65537, 1, 262156, 65537, 1, 327692, 65537, 1, 393228, 65537, 1, 524300, 65537, 1, 327693, 65537, 1, 393229, 65537, 1, 524301, 65537, 1, 196622, 65537, 1, 262158, 65537, 1, 196623, 65537, 1, 262159, 65537, 1, 327695, 65537, 1, 458767, 65537, 1, 524303, 65537, 1, 196624, 65537, 1, 262160, 65537, 1, 393232, 65537, 1, 458768, 65537, 1, 524304, 65537, 1, 196625, 65537, 1, 262161, 65537, 1, 393233, 65537, 1, 458769, 65537, 1, 524305, 65537, 1, 196626, 65537, 1, 262162, 65537, 1, 327698, 65537, 1, 393234, 65537, 1, 458770, 65537, 1, 524306, 65537, 1, -65525, 65537, 1, 11, 65537, 1, 65547, 65537, 1, 131083, 65537, 1, -65524, 65537, 1, 12, 65537, 1, 65548, 65537, 1, 131084, 65537, 1, -65523, 65537, 1, 13, 65537, 1, 65549, 65537, 1, -65522, 65537, 1, 14, 65537, 1, 65550, 65537, 1, 131086, 65537, 1, -65521, 65537, 1, 15, 65537, 1, 65551, 65537, 1, 131087, 65537, 1, -65520, 65537, 1, 16, 65537, 1, 65552, 65537, 1, 131088, 65537, 1, -65519, 65537, 1, 17, 65537, 1, 65553, 65537, 1, 131089, 65537, 1, -65530, 65537, 1, 6, 65537, 1, 65542, 65537, 1, 131078, 65537, 1, -65529, 65537, 1, 7, 65537, 1, 65543, 65537, 1, 131079, 65537, 1, -65528, 65537, 1, 8, 65537, 1, 65544, 65537, 1, 131080, 65537, 1, -65527, 65537, 1, 9, 65537, 1, 65545, 65537, 1, 131081, 65537, 1, -65526, 65537, 1, 10, 65537, 1, 65546, 65537, 1, 131082, 65537, 1, -131069, 65537, 1, -65533, 65537, 1, 3, 65537, 1, 65539, 65537, 1, -131068, 65537, 1, -65532, 65537, 1, 4, 65537, 1, 65540, 65537, 1, -131067, 65537, 1, -65531, 65537, 1, 5, 65537, 1, 65541, 65537, 1, -131066, 65537, 1, -131065, 65537, 1, -131064, 65537, 1, -131063, 65537, 1, -131062, 65537, 1, -131061, 65537, 1, 18, 65537, 1, 65554, 65537, 1, 131090, 65537, 1, 19, 65537, 1, 65555, 65537, 1, 131091, 65537, 1, 196627, 65537, 1, -131058, 65537, 1, -131057, 65537, 1, -131056, 65537, 1, -131055, 65537, 1, -131054, 65537, 1, -65537, 65537, 1, -1, 65537, 1, 65535, 65537, 1, 131071, 65537, 1, 196607, 65537, 1, 262143, 65537, 1, 327679, 65537, 1, 393215, 65537, 1, 458751, 65537, 1, 524287, 65537, 1, 589823, 65537, 1, 655359, 65537, 1, 720895, 65537, 1, 786431, 65537, 1, 851967, 65537, 1, 917503, 65537, 1, -131072, 65537, 1, -65536, 65537, 1, 65536, 65537, 1, 131072, 65537, 1, 196608, 65537, 1, 393216, 65537, 1, 458752, 65537, 1, 524288, 65537, 1, 589824, 65537, 1, 655360, 65537, 1, 720896, 65537, 1, 786432, 65537, 1, 851968, 65537, 1, -131071, 65537, 1, -65535, 65537, 1, 1, 65537, 1, 131073, 65537, 1, 393217, 65537, 1, 458753, 65537, 1, 524289, 65537, 1, 589825, 65537, 1, 655361, 65537, 1, 786433, 65537, 1, 851969, 65537, 1, -131070, 65537, 1, -65534, 65537, 1, 2, 65537, 1, 131074, 65537, 1, 393218, 65537, 1, 458754, 65537, 1, 524290, 65537, 1, 589826, 65537, 1, 655362, 65537, 1, 786434, 65537, 1, 851970, 65537, 1, 458755, 65537, 1, 524291, 65537, 1, 589827, 65537, 1, 720899, 65537, 1, 786435, 65537, 1, 851971, 65537, 1, 458756, 65537, 1, 524292, 65537, 1, 589828, 65537, 1, 720900, 65537, 1, 786436, 65537, 1, 851972, 65537, 1, 131077, 65537, 1, 327685, 65537, 1, 458757, 65537, 1, 524293, 65537, 1, 589829, 65537, 1, 720901, 65537, 1, 786437, 65537, 1, 851973, 65537, 1, 262150, 65537, 1, 327686, 65537, 1, 458758, 65537, 1, 524294, 65537, 1, 655366, 65537, 1, 720902, 65537, 1, 786438, 65537, 1, 851974, 65537, 1, 327687, 65537, 1, 458759, 65537, 1, 524295, 65537, 1, 655367, 65537, 1, 720903, 65537, 1, 786439, 65537, 1, 851975, 65537, 1, 655368, 65537, 1, 720904, 65537, 1, 786440, 65537, 1, 851976, 65537, 1, 655369, 65537, 1, 720905, 65537, 1, 786441, 65537, 1, 851977, 65537, 1, 655370, 65537, 1, 720906, 65537, 1, 786442, 65537, 1, 851978, 65537, 1, 655371, 65537, 1, 720907, 65537, 1, 786443, 65537, 1, 851979, 65537, 1, -131060, 65537, 1, 655372, 65537, 1, 720908, 65537, 1, 786444, 65537, 1, 851980, 65537, 1, -131059, 65537, 1, 655373, 65537, 1, 720909, 65537, 1, 786445, 65537, 1, 851981, 65537, 1, 655374, 65537, 1, 720910, 65537, 1, 786446, 65537, 1, 851982, 65537, 1, 720911, 65537, 1, 786447, 65537, 1, 851983, 65537, 1, 655376, 65537, 1, 720912, 65537, 1, 786448, 65537, 1, 851984, 65537, 1, 655377, 65537, 1, 720913, 65537, 1, 786449, 65537, 1, 851985, 65537, 1, -65518, 65537, 1, 655378, 65537, 1, 720914, 65537, 1, 786450, 65537, 1, 851986, 65537, 1, -131053, 65537, 1, -65517, 65537, 1, 262163, 65537, 1, 327699, 65537, 1, 393235, 65537, 1, 458771, 65537, 1, 524307, 65537, 1, 655379, 65537, 1, 720915, 65537, 1, 786451, 65537, 1, 851987, 65537, 1, -131052, 65537, 1, -65516, 65537, 1, 20, 65537, 1, 65556, 65537, 1, 131092, 65537, 1, 196628, 65537, 1, 262164, 65537, 1, 327700, 65537, 1, 393236, 65537, 1, 458772, 65537, 1, 524308, 65537, 1, 589844, 65537, 1, 655380, 65537, 1, 720916, 65537, 1, 786452, 65537, 1, 851988, 65537, 1, -131051, 65537, 1, -65515, 65537, 1, 21, 65537, 1, 65557, 65537, 1, 131093, 65537, 1, 196629, 65537, 1, 262165, 65537, 1, 327701, 65537, 1, 393237, 65537, 1, 458773, 65537, 1, 524309, 65537, 1, 589845, 65537, 1, 655381, 65537, 1, 720917, 65537, 1, 786453, 65537, 1, 851989, 65537, 1, -131050, 65537, 1, -65514, 65537, 1, 22, 65537, 1, 65558, 65537, 1, 131094, 65537, 1, 196630, 65537, 1, 262166, 65537, 1, 327702, 65537, 1, 393238, 65537, 1, 458774, 65537, 1, 524310, 65537, 1, 589846, 65537, 1, 655382, 65537, 1, 720918, 65537, 1, 786454, 65537, 1, 851990, 65537, 1, -131049, 65537, 1, -65513, 65537, 1, 23, 65537, 1, 65559, 65537, 1, 131095, 65537, 1, 196631, 65537, 1, 262167, 65537, 1, 327703, 65537, 1, 393239, 65537, 1, 458775, 65537, 1, 524311, 65537, 1, 589847, 65537, 1, 655383, 65537, 1, 720919, 65537, 1, 786455, 65537, 1, 851991, 65537, 1, -131048, 65537, 1, -65512, 65537, 1, 24, 65537, 1, 65560, 65537, 1, 131096, 65537, 1, 196632, 65537, 1, 262168, 65537, 1, 327704, 65537, 1, 393240, 65537, 1, 458776, 65537, 1, 524312, 65537, 1, 589848, 65537, 1, 655384, 65537, 1, 720920, 65537, 1, 786456, 65537, 1, 851992, 65537, 1, -131047, 65537, 1, -65511, 65537, 1, 25, 65537, 1, 65561, 65537, 1, 131097, 65537, 1, 196633, 65537, 1, 262169, 65537, 1, 327705, 65537, 1, 393241, 65537, 1, 458777, 65537, 1, 524313, 65537, 1, 589849, 65537, 1, 655385, 65537, 1, 720921, 65537, 1, 786457, 65537, 1, 851993, 65537, 1)
layer_1/name = "路径"
layer_1/tile_data = PackedInt32Array(1, 131073, 1, 65537, 131073, 1, 131073, 131073, 1, 196609, 131073, 1, 262145, 131073, 1, 327681, 131073, 1, 393217, 131073, 1, -65535, 131073, 1, 458753, 131073, 1, 524289, 131073, 1, 589825, 131073, 1, 655361, 196609, 1, 655362, 65537, 0, -65534, 1, 1, 2, 1, 1, 65538, 1, 1, 131074, 1, 1, 196610, 1, 1, 262146, 1, 1, 327682, 1, 1, 393218, 1, 1, 458754, 1, 1, 524290, 1, 1, 589826, 1, 2, 589827, 65537, 2, 589828, 131073, 2, 655363, 65537, 0, 655364, 65537, 0, 655365, 262145, 1, 131077, 1, 0, 196613, 1, 1, 262149, 1, 1, 327685, 1, 1, 393221, 1, 1, 458757, 1, 1, 524293, 1, 1, 589829, 1, 1, 131076, 131073, 1, 196612, 131073, 1, 262148, 131073, 1, 327684, 131073, 1, 393220, 131073, 1, 458756, 131073, 1, 524292, 131073, 1, 65540, 196609, 0, 65541, 65537, 2, 65542, 65537, 2, 65543, 65537, 2, 131078, 65537, 0, 131079, 131073, 0, 65544, 262145, 0, 131080, 1, 1, 196616, 1, 1, 196615, 131073, 1, 262151, 131073, 1, 327687, 131073, 1, 393223, 131073, 1, 458759, 131073, 1, 524295, 131073, 1, 589831, 131073, 1, 655367, 196609, 1, 262152, 1, 1, 327688, 1, 1, 393224, 1, 1, 458760, 1, 1, 524296, 1, 1, 589832, 1, 2, 655368, 65537, 0, 589833, 65537, 2, 655369, 65537, 0, 262154, 131073, 1, 327690, 131073, 1, 393226, 131073, 1, 458762, 131073, 1, 524298, 131073, 1, 589834, 131073, 2, 655370, 65537, 0, 262155, 1, 1, 327691, 1, 1, 393227, 1, 1, 458763, 1, 1, 524299, 1, 1, 589835, 1, 1, 655371, 262145, 1, 262157, 131073, 1, 327693, 131073, 1, 393229, 131073, 1, 458765, 131073, 1, 524301, 131073, 1, 589837, 131073, 1, 655373, 196609, 1, 262158, 1, 1, 327694, 1, 1, 393230, 1, 1, 458766, 1, 1, 524302, 1, 1, 589838, 1, 2, 655374, 65537, 0, 589839, 65537, 2, 655375, 65537, 0, 262160, 131073, 1, 327696, 131073, 1, 393232, 131073, 1, 458768, 131073, 1, 524304, 131073, 1, 589840, 131073, 2, 655376, 65537, 0, 262161, 1, 1, 327697, 1, 1, 393233, 1, 1, 458769, 1, 1, 524305, 1, 1, 589841, 1, 1, 655377, 262145, 1, 262163, 131073, 1, 327699, 131073, 1, 393235, 131073, 1, 458771, 131073, 1, 524307, 131073, 1, 589843, 131073, 1, 655379, 196609, 1, 262164, 1, 1, 327700, 1, 1, 393236, 1, 1, 458772, 1, 1, 524308, 1, 1, 589844, 1, 2, 655380, 65537, 0, 589845, 65537, 2, 655381, 65537, 0, 65546, 196609, 0, 131082, 131073, 1, 196618, 131073, 1, 65547, 65537, 2, 131083, 1, 0, 196619, 1, 1, 65548, 65537, 2, 131084, 65537, 0, 65549, 65537, 2, 131085, 131073, 0, 196621, 131073, 1, 65550, 262145, 0, 131086, 1, 1, 196622, 1, 1, 65552, 196609, 0, 131088, 131073, 1, 196624, 131073, 1, 65553, 65537, 2, 131089, 1, 0, 196625, 1, 1, 65554, 65537, 2, 131090, 65537, 0, 65555, 65537, 2, 131091, 131073, 0, 196627, 131073, 1, 65556, 262145, 0, 131092, 1, 1, 196628, 1, 1, 589846, 65537, 2, 655382, 65537, 0, 589847, 65537, 2, 655383, 65537, 0, 0, 983041, 0, 65536, 983041, 0, 131072, 983041, 0, 196608, 983041, 0, 262144, 983041, 0, 327680, 983041, 0, 393216, 983041, 0, 458752, 983041, 0, 524288, 983041, 0, 589824, 983041, 0, 655360, 983041, 0, 720896, 983041, 0, 720897, 983041, 0, 720898, 983041, 0, 720899, 983041, 0, 720900, 983041, 0, 720901, 983041, 0, 720902, 983041, 0, 720903, 983041, 0, 720904, 983041, 0, 720906, 983041, 0, 720907, 983041, 0, 720908, 983041, 0, 720909, 983041, 0, 720910, 983041, 0, 720911, 983041, 0, 720912, 983041, 0, 720913, 983041, 0, 720914, 983041, 0, 720915, 983041, 0, 720916, 983041, 0, 720917, 983041, 0, 524309, 983041, 0, 458773, 983041, 0, 393237, 983041, 0, 327701, 983041, 0, 262165, 983041, 0, 196629, 983041, 0, 131093, 983041, 0, 65557, 983041, 0, 21, 983041, 0, 20, 983041, 0, 19, 983041, 0, 18, 983041, 0, 17, 983041, 0, 16, 983041, 0, 15, 983041, 0, 14, 983041, 0, 13, 983041, 0, 12, 983041, 0, 11, 983041, 0, 10, 983041, 0, 9, 983041, 0, 8, 983041, 0, 7, 983041, 0, 6, 983041, 0, 5, 983041, 0, 4, 983041, 0, 3, 983041, 0, 65539, 983041, 0, 131075, 983041, 0, 196611, 983041, 0, 262147, 983041, 0, 327683, 983041, 0, 393219, 983041, 0, 458755, 983041, 0, 524291, 983041, 0, 196614, 983041, 0, 262150, 983041, 0, 327686, 983041, 0, 393222, 983041, 0, 458758, 983041, 0, 524294, 983041, 0, 589830, 983041, 0, 655366, 983041, 0, 458761, 983041, 0, 393225, 983041, 0, 327689, 983041, 0, 262153, 983041, 0, 196617, 983041, 0, 131081, 983041, 0, 65545, 983041, 0, 196620, 983041, 0, 262156, 983041, 0, 327692, 983041, 0, 393228, 983041, 0, 458764, 983041, 0, 524300, 983041, 0, 589836, 983041, 0, 655372, 983041, 0, 655378, 983041, 0, 589842, 983041, 0, 524306, 983041, 0, 458770, 983041, 0, 393234, 983041, 0, 327698, 983041, 0, 262162, 983041, 0, 196626, 983041, 0, 65551, 983041, 0, 131087, 983041, 0, 196623, 983041, 0, 262159, 983041, 0, 327695, 983041, 0, 393231, 983041, 0, 458767, 983041, 0, 524303, 983041, 0, 524297, 983041, 0, 720905, 983041, 0)

[node name="Path2D" type="Path2D" parent="TileMap"]
curve = SubResource("Curve2D_joo5w")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameForm" parent="CanvasLayer" instance=ExtResource("5_cupd8")]

[node name="MusicBG" type="AudioStreamPlayer" parent="."]

[node name="AudioFootStep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_11210")

[node name="TimerSpawnEnemy" type="Timer" parent="."]
